--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "Youtube ADD",
-  "version": "0.3",
+  "name": "Undistract",
+  "version": "0.0.0.1",
   "content_scripts": [
     {
       "matches": [
@@ -11,7 +11,7 @@
     }
   ],
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "icon128.png"
   },
   "background": {
     "scripts": ["background.js"]
